nfs-server/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server
  namespace: nfs-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfs-server
  template:
    metadata:
      labels:
        app: nfs-server
    spec:
      containers:
        - name: nfs-server
          image: itsthenetwork/nfs-server-alpine:latest-arm

          ports:
            - containerPort: 2049
              name: nfsd

            - containerPort: 111
              name: mapper

            - containerPort: 32767
            - containerPort: 32765
            - containerPort: 32766

          volumeMounts:
            - mountPath: /cameras
              name: nfs-server-mount

          securityContext:
            capabilities:
              add: ["SYS_ADMIN", "SETPCAP"]

          resources:
            requests:
              memory: "256Mi"
              cpu: "2"
            limits:
              memory: "4096Mi"
              cpu: "4"
      volumes:
        - name: nfs-server-mount
          persistentVolumeClaim:
            claimName: nfs-server-pvc
