nfs-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfs-server-service
  namespace: nfs-server
  annotations:
    metallb.io/address-pool: default-pool
spec:
  allocateLoadBalancerNodePorts: false
  type: LoadBalancer
  selector:
    app: nfs-server
  ports:
    - protocol: TCP
      port: 2049
      targetPort: 2049
      name: nfsv4
