nfs-server/templates/egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-udp-outbound
  namespace: server
spec:
  podSelector:
    matchLabels:
      app: nfs-server
  policyTypes:
    - Egress
  egress:
  - {}
